2005-05-02  Stefan Jahn  <stefan@lkcc.org>

	* tvector.cpp: Improved norm() calculation.

	* qucsdefs.h (qucs_definition_available): Fixed number of
	ports for coplanar open and short.

	* matrix.cpp: Made twoport() transformations work on matrices
	with >= (2,2) dimensions.

	* evaluate.cpp: Fixed PlotVs() implementations.

2005-04-25  Stefan Jahn  <stefan@lkcc.org>

	* matrix.cpp, tmatrix.cpp: Fixed yet another memory leak.
	Thanks to Brendan for pointing this out.

	* eqnsys.cpp: Fixed memory leaks as well as ANSI-C++ compile
	warning of Borland C.

2005-04-23  Stefan Jahn  <stefan@lkcc.org>

	* vector.h (class vector), matrix.h (class matrix): Added the
	'()' accessors.

	* dcsolver.cpp (saveOperatingPoints): Calling the function
	for non-linear circuits.

	* circuit.h (class circuit): New virtual function for saving
	the DC operating points (branch currents and node voltages).

2005-04-19  Stefan Jahn  <stefan@lkcc.org>

	* complex.cpp: Using xhypot() in abs() calculation for better
	numerical stability.

2005-04-17  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Added convenience functions for all the
	circle functionality: GaCircle(S,Ga[,Arcs]) - Ga can be
	either vector or number, Arcs can be vector (angles in
	degree), number (number of equally spaced circle segments)
	or be omitted (the number defaults to 64).

	* sweep.cpp: Using the linspace/logspace functions of the
	vector class.

	* vector.cpp (logspace, linspace): Added these functions
	for convenience here.

	* matvec.cpp, matrix.cpp (rollet): Moved these functions from
	the equation solver to the matrix and matvec class.

	* evaluate.cpp: Speed up noise circle calculations.  Added
	gain circle and PlotVs() applications.

	* equation.cpp: It's now possible to generate independent
	data vectors on the fly.  Useful for circle functions and
	PlotVs().

2005-04-14  Stefan Jahn  <stefan@lkcc.org>

	* matvec.cpp, matrix.cpp (twoport): Check size of matrices