@@ -362,6 +362,16 @@ inductance per unit length and the wave resistance.
 L_{short} = L'\cdot \Delta l_{short} = \dfrac{\sqrt{\varepsilon_{r,eff}}\cdot Z_L}{c_0} \cdot \Delta l_{short}
 \end{equation}
 
+\addvspace{12pt}
+
+According to W.J.Getsinger \cite{Getsinger6} the CPW short-circuit
+inductance per unit length can also be modeled by
+\begin{equation}
+L' = \dfrac{2}{\pi}\cdot \varepsilon_0 \cdot \varepsilon_{r,eff} \cdot \left(W + s\right)\cdot Z_L^2\cdot \left(1 - \text{sech} \left(\dfrac{\pi\cdot Z_{F0}}{2\cdot Z_L\cdot \sqrt{\varepsilon_{r,eff}}}\right)\right)
+\end{equation}
+
+based on his duality \cite{Getsinger5} theory.
+
 \section{Coplanar waveguide gap}
 %\addcontentsline{toc}{section}{Coplanar waveguide gap}
 
