@@ -639,6 +639,7 @@
  year    = {1993},
  pages   = {1534-1537},
  local   = "{Open and short Circuits in coplanar MMICs .pdf}",
+ local   = "{00245673.pdf}",
 }
 
 @article{Getsinger5,
@@ -648,6 +649,18 @@
  year    = {1983},
  pages   = {154-156},
  local   = "{Circuit Duals on Planar Transmission Media.pdf}",
+}
+
+@article{Getsinger6,
+ author  = {William J. Getsinger},
+ title   = "{End-Effects in Quasi-TEM Transmission Lines}",
+ journal = IEEETMTT,
+ volume  = {41},
+ number  = {4},
+ month   = apr,
+ year    = {1993},
+ pages   = {666-671},
+ local   = "{00231662.pdf}",
 }
 
 @article{Edwards3,
